--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -35,6 +35,7 @@ http {
 		listen <%= ENV["PORT"] %>;
 		server_name _;
 		keepalive_timeout 5;
+		client_max_body_size 20M;
 
 		location / {
 			# Uncomment this if statement to force SSL/redirect http -> https
